# codeTools

./: .gitignore  MANIFEST.in  README.md  install.sh  pyproject.toml
codeUtils/: __base__.py  __init__.py
codeUtils/augment/: __init__.py  symmetry.py
codeUtils/callback/: __init__.py  boxCallback.py  tqdmCallback.py
codeUtils/decorator/: __init__.py  deprecatedConfig.py  errorDecorator.py  error_decorator.py  execTime.py  exec_time.py  registry.py
codeUtils/display/: __init__.py  histogram.py  imgShow.py
codeUtils/imgOperation/: splitImg.py
codeUtils/inference/: __init__.py  base.py  boxMatch.py  yoloInfer.py
codeUtils/labelOperation/: __init__.py  annotaion2labelme.py  coco2other.py  converter.py  cutImgFromLabel.py  labelOperationCli.py  labelme2other.py  labelme2yolo.py  readLabel.py  saveLabel.py  voc2other.py  yolo2other.py  yoloLabelExclude.py
codeUtils/logTools/: __init__.py  logConfig.py
codeUtils/log_tools/: __init__.py  log_config.py
codeUtils/matchFactory/: __init__.py  bboxMatch.py  shapeMatch.py
codeUtils/match_factory/: __init__.py  bbox_match.py  shape_match.py
codeUtils/matrix/: __init__.py  confusionMatrix.py  confusion_matrix.py  distMatrix.py
codeUtils/scheduler/: __init__.py  baseOperator.py  base_operator.py  paramObject.py  param_object.py  taskManage.py  task_manage.py
codeUtils/scripts/: elfinCli.py
codeUtils/shellGuide/: cliCommand.py
codeUtils/tools/: __init__.py  cacheFile.py  cache_file.py  checks.py  cocoTools.py  download.py  fontConfig.py  font_config.py  futureConf.py  loadFile.py  numpyTools.py  obj_trans.py  pathAppend.py  torchTools.py  tqdmConf.py  tqdm_conf.py
docs/: cli使用指南.md  operator_def.md  task_manage.md  数据操作说明.md  检测的指标评估.md
